force-app/main/default/objects/OrderItemStagePriority__mdt/OrderItemStagePriority__mdt.object-meta.xml
<CustomObject>
    <label>OrderItemStagePriority</label>
    <pluralLabel>OrderItemStagePriority</pluralLabel>
</CustomObject>