force-app/main/default/objects/OrderItemStagePriority__mdt/fields/Bit__c.field-meta.xml
<CustomField>
    <fullName>Bit__c</fullName>
    <label>Bit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>